fixed spacing

--- a/css/style.css
+++ b/css/style.css
@@ -156,6 +156,7 @@
     .formContainer{
         width: 100%;
         padding: 1em;
+        margin-top: 0.5em;
     }
     .userDetails{
         flex-direction: column;
@@ -164,10 +165,10 @@
         width: 100%;
     }
     .userDetails .part1{
-        margin-bottom: 1em;
+        margin-bottom: 0em;
     }
     .userDetails .part2{
-        margin-top: 1em;
+        margin-top: 0em;
     }
     .userMsg textarea{
         height: 10em;
